--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <header>
 <!--            <h1>Ahamad Elabd</h1>-->
-       <h1>I have changed</h1>
+       <h1>Index</h1>
         </header>
         <nav>
             <ul>
